--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  		<div class="container-fluid">
+   			 <a href = "#" class = "navbar-brand"> Faces</a>
+      <ul class="nav navbar-nav">
+        <li><%= link_to "All Statuses", statuses_path %></li>
+      </ul>
+	</nav>
+	<div class="container-fluid">
+		<%= yield %>
+	</div>
 </body>
 </html>
